--- a/Mumlrtum-Tamplate.html
+++ b/Mumlrtum-Tamplate.html
@@ -135,7 +135,7 @@
 
 <!--
 
-TUMBLR THEME: else | © comnsense17 (@mirelse)
+TUMBLR THEME: else | © comnsense (@comnsense)
 
     Version 2.0.0 | updated June 14th, 2022
 
@@ -455,7 +455,7 @@ section#posts[aria-busy="true"]::after {
 <!-- theme credit (please don't remove!!! thank u) -->
 
 
-<a class="theme-credit2" href="https://github.com/mirelse/mumblrtum" target="_blank"> © Comnsense17 2022.<br> All rights reserved.</a>
+<a class="theme-credit2" href="https://github.com/mirelse/mumblrtum" target="_blank"> © Comnsense .<br> All rights reserved.</a>
 
 </main></body>
     
